Dosctor search result pages

--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -3,14 +3,6 @@ html {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 }
 
-body {
-	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 14px;
-	line-height: 1.428571429;
-	color: #333;
-	background-color: #fff
-}
-
 h3,.h3 {
 	font-size: 21px;
 	font-weight: 400;
@@ -376,25 +368,38 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 
 .docTopContainer
 {
-	width:100%;
-	height:50px;
-	margin-top:60px;	
-	background-image: linear-gradient(#b20000, #800000 100px);
+	width:80%;
+	height:85px;
+	margin-top:60px;
+	margin-left:8%;
+	margin-bottom:5px;	
+	background-image: linear-gradient(#ffffff, #e9e9e9 100px);
+	border: 1px solid silver;
+	box-shadow: 1px 1px 1px #888888;
 }
 
 .docSearchContainer
 {
-	height: 100%;
+	height: 1460px;
 	margin-top:0;
 }
 
-.docMiscContainer
+.docLeftContainer
 {
-	width:14%; 
+	width:8%; 
 	position: relative; 
 	display: inline-block; 
 	float:left;
-	height:100%;
+	height:90%;
+}
+
+.docRightContainer
+{
+	width:10%; 
+	position: relative; 
+	display: inline-block; 
+	float:left;
+	height:90%;
 }
 
 .docListContainer
@@ -403,19 +408,34 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 	position: relative;
 	display: inline-block;
 	float:left;
-	height:100%;
-	background: #e9e9e9;	
+	height:1321px;
+	background: #f9f9f9;
+	overflow:hidden;
+	opacity: 0.80;
+	border:1px solid silver;
+	box-shadow: 1px 1px 1px #888888;	
+}
+
+.docListContainerContent
+{
+    width: 100%;
+}
+
+.docListContainer:HOVER
+{
+	overflow-y:auto;
 }
 
 .docDetailsContainer
 {
-	width:55%;
+	width:50%;
 	position: relative;
 	display: inline-block;
 	float:left;
-	height:100%;
+	height:1321px;
+	background-color: white;
 	border:1px solid silver;
-	
+	box-shadow: 1px 1px 1px #888888;
 }
 
 #docList
@@ -481,37 +501,62 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 	float:left;
 }
 
+#docDetailsHeader
+{
+	display: inline-block;
+	margin-left:15px;
+	width: 50%;
+	float:left;	
+}
+
 #docDetails
 {
 	display: inline-block;
-	margin-left:10px;
+	width: 100%;
+	background: #fff;	
 }
 
-#search-tabline {
-	border: 0;
-	background-image: linear-gradient(#ffffff, #f2f2f2 100px);
-	background: rgba(255,255,255,0.6);
+#docProfileImage
+{
+	height:150px;
+	padding-right: 10px;
+	padding-top: 5px;
 }
 
-#search-tabline .ui-tabs-active {
-	background-image: linear-gradient(#fbfbfb, #f6f6f6 100px);
-	background: #f4f4f4;
-	font-weight: bold;
-	
-}
-
-#search-tabline .ui-tabs-panel { 
-    background: #f5f3e5 url(http://code.jquery.com/ui/1.8.23/themes/south-street/images/ui-bg_highlight-hard_100_f5f3e5_1x100.png) repeat-x scroll 50% top; 
-    border-width: 0px 1px 1px 1px; 
+#search-tabline
+{
+    border: none;
+    height:80%;	   
 }
 
 #search-tabline .ui-tabs-nav{
-	background: transparent;
-	padding-left: 0px;  
-    border-width: 0px 0px 1px 0px; 
+	margin:0;
+	border-radius: 0px;
+	border-left: 0px;
+	border-right: 0px;
+	border-top: 0px;
+	border-bottom: 7px solid silver;  
+    background: transparent; 
+    -moz-border-radius: 0px; 
+    -webkit-border-radius: 0px;    
+}
+
+#search-tabline .ui-tabs-active {
+	margin:0;
+	padding: 2px 2px 0;
+	border-radius:0;
+	background:silver;
+	box-shadow: 2px 0px 0px #888888;
+	font-weight: bold;
+}
+
+#search-tabline .ui-tabs-nav li {
+	margin:0px;
+	box-shadow: 1px 0 0 rgba(0, 0, 0, .2);
     -moz-border-radius: 0px; 
     -webkit-border-radius: 0px; 
     border-radius: 0px; 
+    padding: 2px 2px 0;
 }
 
 #googleMap {
@@ -537,6 +582,7 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 .spanMedium
 {
 	font-size: 16px;
+	font-weight: bold;
 }
 
 .spanSmall
