--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -61,21 +61,14 @@ a,.link {
 	-webkit-box-shadow: 2px 2px 4px #888;
 	-moz-box-shadow: 2px 2px 4px #888;
 	box-shadow: 2px 2px 4px #888;
-
-}
-
-.SignIn-Login
-{
-	margin-top:-20px;
-	height: 100%;
-	z-index: 12;
 	background: #FAFDFF;
 }
 
 .SignIn input{
 	position:relative; 
 	top:10px;
-	height:45px;
+	height:44px;
+	width:280px;
     font-size: 1.4em;
     border: 1px solid #e4ddd7;
     border-radius: 6px;
@@ -506,8 +499,24 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 {
 	display: inline-block;
 	margin-left:15px;
-	width: 70%;
+	width: 56%;
 	float:left;	
+}
+
+#docActions
+{
+	width: 115px;
+	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 12px;
+	font-weight:bold;
+	text-align: left;
+	min-width: 115px;
+    padding:4px 0 0 2px;
+    margin-top: 2px;
+}
+
+.buttonImageWithText{
+	float:left;margin:0 5px 0 0;
 }
 
 #docDetails
@@ -521,6 +530,8 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 {
 	height:150px;
 	padding-top: 5px;
+	float:right;
+	margin-right:5px;
 }
 
 #search-tabline
@@ -571,7 +582,7 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 {
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-weight: bold; 
-	font-size: 36px;
+	font-size: 28px;
 }
 
 .spanLarge
@@ -605,4 +616,65 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 .table tr td {
 	margin:2px;padding:2px;
 	border:1px solid silver;
+} 
+   
+.bubbleReview {
+  background-color:#e5eecc;
+  margin-right:10px;
+  width:100%;
+  height:auto;
+  padding:10px;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color:#343434;
+  -moz-border-radius:5px;
+  -webkit-border-radius:5px;
+  border-radius:5px;
+  -webkit-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
+  box-shadow: 0px 0 3px rgba(0,0,0,0.25);  
+}
+
+.bubbleReview:before {
+  position: relative;
+  display: block;
+  content: "";  
+  border-color: transparent transparent #e5eecc transparent;
+  border-style: solid;
+  border-width: 10px;
+  height:0;
+  width:0;
+  left:10px;
+  top:-30px;  
+}
+
+a.tooltip {outline:none; }
+a.tooltip strong {line-height:30px;}
+a.tooltip:hover {text-decoration:none;} 
+a.tooltip span {
+    z-index:10;
+    display:none; 
+    padding:4px 4px 4px 4px; 
+    margin-left:-60px;
+    margin-top:50px;
+    width:auto; line-height:16px;
+}
+a.tooltip:hover span{
+    display:inline; position:absolute; 
+    border:2px solid #FFF;  color:#EEE;
+    background:#000 url(src/css-tooltip-gradient-bg.png) repeat-x 0 0;
+}
+.callout {z-index:20;position:absolute;border:0;top:-14px;left:20px;}
+    
+/*CSS3 extras*/
+a.tooltip span
+{
+    border-radius:2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+        
+    -moz-box-shadow: 0px 0px 8px 4px #666;
+    -webkit-box-shadow: 0px 0px 8px 4px #666;
+    box-shadow: 0px 0px 8px 4px #666;
+
+    opacity: 0.8;
 }
